bk_ida/sjengida/g2/nk_attacked
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:784:6: error: use of undeclared identifier 'bishop_o_7'
v3 = bishop_o_7[v2]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:786:7: error: use of undeclared identifier 'knight_o_6'
v18 = knight_o_6 + 4; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:789:6: error: use of undeclared identifier 'bishop_o_7'
if ( bishop_o_7 == v18 ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:791:17: error: use of undeclared identifier 'rook_o_8'
v20 = ( void **)rook_o_8; 
                ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:815:6: error: use of undeclared identifier 'jpt_40352C'
if ( jpt_40352C == v20 ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:853:6: error: use of undeclared identifier 'bishop_o_7'
v3 = bishop_o_7[v2]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:855:6: error: use of undeclared identifier 'knight_o_6'
v7 = knight_o_6 + 4; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:858:12: error: use of undeclared identifier 'bishop_o_7'
if ( v7 == bishop_o_7 ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:860:16: error: use of undeclared identifier 'rook_o_8'
v9 = ( void **)rook_o_8; 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/attacks.c:884:12: error: use of undeclared identifier 'jpt_40352C'
if ( v9 == jpt_40352C ) 
           ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/nk_attacked/src/obj/attacks.o] Error 1
